# Network-Security-System

./: .gitignore  README.md  demo_validation.py  main.py  push_data.py  pyproject.toml  requirements.txt  setup.py  test_db.py
dummy_data/: train.csv
networksecurity/components/: data_ingestion.py  data_validation.py
networksecurity/constant/training_pipeline/: __init__.py
networksecurity/entity/: artifact_entity.py  config_entity.py
networksecurity/exception/: exception.py
networksecurity/logging/: __init__.py  logger.py
networksecurity/utils/main_utils/: utils.py
